fixing css bug of continue btn on lesson page not showing up

--- a/css/lesson.css
+++ b/css/lesson.css
@@ -197,12 +197,6 @@ body {
     width: 100vw;
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
   }
 
   .main {
